examples/kubernetes/03-redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wintercms-redis
  namespace: wintercms
  labels:
    app: wintercms-app
    tier: redis-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wintercms-app
      tier: redis-app
  template:
    metadata:
      labels:
        app: wintercms-app
        tier: redis-app
    spec:
      containers:
      - image: redis:6-alpine
        name: wintercms-redis
        imagePullPolicy: Always
        ports:
        - containerPort: 6379
        resources:
          limits:
            cpu: "0.1"
