examples/kubernetes/04-database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wintercms-postgres-service
  namespace: wintercms
  labels:
    app: wintercms-app
    tier: db
spec:
  type: ClusterIP
  selector:
      app: wintercms-app
      tier: db
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: http
