examples/kubernetes/04-redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wintercms-redis-service
  namespace: wintercms
  labels:
    app: wintercms-app
    tier: redis-app
spec:
  type: ClusterIP
  selector:
      app: wintercms-app
      tier: redis-app
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: http
