examples/kubernetes/05-wintercms-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wintercms-service
  namespace: wintercms
  labels:
    app: wintercms-app
    tier: frontend
spec:
  type: ClusterIP
  selector:
      app: wintercms-app
      tier: frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
